# rule-engine

./: .gitignore  CLAUDE.md  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/java/com/ruleengine/: App.java
app/src/main/java/com/ruleengine/engine/: BatchProcessor.java  RuleEngine.java
app/src/main/java/com/ruleengine/index/: AhoCorasick.java  CandidateResult.java  ContainsStrategy.java  IntAhoCorasick.java  IntTrie.java  RuleIndex.java  Trie.java
app/src/main/java/com/ruleengine/rule/: Condition.java  Operator.java  Rule.java  RuleLoader.java
app/src/main/java/com/ruleengine/url/: ParsedUrl.java  UrlParser.java  UrlPart.java
app/src/test/java/com/ruleengine/: AppTest.java
app/src/test/java/com/ruleengine/benchmark/: BenchmarkRunner.java  DataGenerator.java  UrlParserBenchmark.java
app/src/test/java/com/ruleengine/engine/: BatchProcessorTest.java  RuleEngineIntegrationTest.java  RuleEngineTest.java
app/src/test/java/com/ruleengine/index/: AhoCorasickTest.java  IntAhoCorasickTest.java  IntTrieTest.java  RuleIndexTest.java  TrieTest.java
app/src/test/java/com/ruleengine/rule/: RuleLoaderTest.java
app/src/test/resources/: integration-rules.json  integration-urls.txt  test-rules.json  test-urls.txt
gradle/: libs.versions.toml
plans/: initial_plan.md
rust/: Cargo.toml
rust/benches/: throughput.rs
rust/src/: aho_corasick.rs  batch.rs  engine.rs  lib.rs  main.rs  rule.rs  rule_index.rs  trie.rs  url.rs
rust/tests/: data_generator.rs  engine_test.rs
scripts/: profile.py
(+1 files in other folders)
